ecmascript/parser/tests/test262-error-references/fail/6097ad2394486d46.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/6097ad2394486d46.js:1:7
  |
1 | const default
  |       ^^^^^^^

